Make it work with Bedrock

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 
-# Copy the file to ".env" and replace with your Anthropic API key
-ANTHROPIC_API_KEY=YOUR-ANTHROPIC-API-KEY-GOES-HERE
+# Copy the file to ".env"
+MODEL_ID=us.anthropic.claude-sonnet-4-20250514-v1:0
+PROVIDER=bedrock
